fix: make home page button more visible

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -32,6 +32,10 @@
       & > img {
         height: 200px;
       }
+
+      &__start {
+        background-color: var(--alt-color);
+      }
     }
 
     &__row {
